--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -3,6 +3,6 @@ version : 3
 services:
   web:
     build: .
-    command: sh -c "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    command: sh -c "uvicorn main:app --host 0.0.0.0 --port=8000"
     ports:
       - $PORT:$PORT
