--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -1,8 +1,8 @@
-version : 3
+version: '3'
 
 services:
   web:
     build: .
-    command: sh -c "uvicorn main:app host=127.0.0.1, port=8000, reload=True"
+    command: uvicorn main:app --host=127.0.0.1 --port=8000 --reload
     ports:
-      - 8000:8000
+      - "8000:8000"
