--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -3,5 +3,5 @@ version: '3'
 services:
   web:
     build: .
-    command: uvicorn main:app --host=0.0.0.0 --port=8000 --reload
+    command: uvicorn main:app --host=https://objek-classificationtensorflow-production.up.railway.app/ --port=8000 --reload
 
