--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-
 python-multipart==0.0.9
 imutils==0.5.4
 scipy==1.13.0
 cvzone==1.3.3
 tensorflow==2.15.0
-uvicorn==0.23.2
-fastapi==0.103.1
+uvicorn
+fastapi
 python-dotenv==1.0.0
